already to wworkd:

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
 
+    <div class="container-grid">
+        <div class="item"></div>
+    </div>
+    <div class="container-grid grid-two">
+        <div class="item"></div>
+    </div>
+
     <script src="./index.js"></script>
 </body>
 </html>
