--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,99 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
 
-    <div class="container-grid">
-        <div class="item"></div>
-    </div>
-    <div class="container-grid grid-two">
-        <div class="item"></div>
+
+
+    <div class="conteiner">
+
+
+
+        <header>
+            <div class="header_top">
+                <div class="header_top_left">
+                    <img class='logo' src="https://www.ikea.com/nl/en/static/ikea-logo.f7d9229f806b59ec64cb.svg" alt="">
+                    <form name="search">
+                        <div>
+                            <img src="./icons/211817_search_strong_icon.svg" width="16px" height="16px" alt="">
+                            <input type="text" placeholder="What are you looking for?">
+                        </div>
+                        <img class="photo" src="./icons/115759_camera_icon.svg"
+                            width="16px" height="16px" alt="">
+                    </form>
+                </div>
+
+                <div class="login">
+                    <button class="log_in">
+                        <img src="./icons/1564534_customer_man_user_account_profile_icon (1).svg" alt="">
+                        <span>Hej! Log in or sing up</span>
+                    </button>
+                    <button class="like btn">
+                        <img src="./icons/8664909_heart_like_icon.svg" alt="">
+                    </button>
+                    <button class="basket btn">
+                        <img src="./icons/3507743_basket_iconoteka_shop_shopping_store_icon.svg" alt="">
+                    </button>
+                </div>
+
+
+            </div>
+            <div class="header_bottom">
+                <div class="header_bottom_left">
+                    <a href="#">
+                        <p>Products</p>
+                    </a>
+                    <a href="#">
+                        <p>Rooms</p>
+                    </a>
+                    <a href="#">
+                        <p>What's new</p>
+                    </a>
+                    <a href="#">
+                        <p>Offers</p>
+                    </a>
+
+                </div>
+                <div class="header_bottom_right">
+                    <a href="#">
+                        <p><img src="./icons/7019497_shipping_transportation_delivery_truck_online_icon.svg" alt="">
+                            <span>Enter postcode</span>
+                        </p>
+                    </a>
+                    <a href="#">
+                        <p><img src="./icons/9042517_garage_icon.svg" alt=""> <span>Hengelo</span></p>
+                    </a>
+
+                </div>
+            </div>
+
+        </header>
+
+
+
+
+
+        <div class="amin_cont">
+            <div class="box">
+                <button class="link_room"></button>
+            </div>
+
+        </div>
+
+
+
+
+
     </div>
 
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./index.js"></script>
 </body>
+
 </html>
