--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="amirjon_cont_means_of_communication">
             <div class="amirjon_cont_AI_item">
-                <img src="./icon/building.svg">
+                <img src="./icons/building.svg">
                 <h3>
                     Click & collect
                 </h3>
@@ -95,7 +95,7 @@
                 </p>
             </div>
             <div class="amirjon_cont_AI_item">
-                <img src="./icon/truck.svg">
+                <img src="./icons/truck.svg">
                 <h3>
                     Transport & delivery
                 </h3>
@@ -107,7 +107,7 @@
                 </a>
             </div>
             <div class="amirjon_cont_AI_item">
-                <img src="./icon/notes.svg">
+                <img src="./icons/notes.svg">
                 <h3>
                     Customer service
                 </h3>
@@ -119,7 +119,7 @@
                 </a>
             </div>
             <div class="amirjon_cont_AI_item">
-                <img src="./icon/messages.svg">
+                <img src="./icons/messages.svg">
                 <h3>
                     Design with our experts
                 </h3>
