--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
   <div class="window_bg"></div>
   <div class="menu_main">
     <div class="menu_header">
@@ -204,6 +205,7 @@
           </button>
         </div>
       </div>
+      
       <div class="header_bottom">
         <div class="header_bottom_left">
           <a href="./pages/products.html">
@@ -371,28 +373,28 @@
   </div>
 
   <div class="time_cont">
-      <div class="time">
-        <h1>Цены действительны</h1>
-        <div class="time_main">
-          <div class="time_box activetime">
-            <p id="days"></p>
-            <span>Дней</span>
-          </div>
-          <div class="time_box activetime">
-            <p id="hours"></p>
-            <span>Часа</span>
-          </div>
-          <div class="time_box activetime">
-            <p id="minutes"></p>
-            <span>Минут</span>
-          </div>
-          <div class="time_box">
-            <p id="seconds"></p>
-            <span>Секунд</span>
-          </div>
+    <div class="time">
+      <h1>Цены действительны</h1>
+      <div class="time_main">
+        <div class="time_box activetime">
+          <p id="days"></p>
+          <span>Дней</span>
+        </div>
+        <div class="time_box activetime">
+          <p id="hours"></p>
+          <span>Часа</span>
+        </div>
+        <div class="time_box activetime">
+          <p id="minutes"></p>
+          <span>Минут</span>
+        </div>
+        <div class="time_box">
+          <p id="seconds"></p>
+          <span>Секунд</span>
         </div>
       </div>
     </div>
+  </div>
 
   <footer>
     <div class="footer_cont">
@@ -604,12 +606,24 @@
     </div>
   </footer>
 
+
+  
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./index.js"></script>
   <script src="./modules/timer.js"></script>
+  
+  
+  
+
+
+  <!-- <script>
+    header()
+  </script> -->
+
+
   <!-- Initialize Swiper -->
   <script>
     var swiper = new Swiper(".mySwiper", {
