--- a/index.html
+++ b/index.html
@@ -222,9 +222,11 @@
                         <img src="./icons/1564534_customer_man_user_account_profile_icon (1).svg" alt="">
                         <span>Hej! Log in or sing up</span>
                     </button>
-                    <button class="like btn">
-                        <img src="./icons/8664909_heart_like_icon.svg" alt="">
-                    </button>
+                    <a href="./pages/like.html">
+                        <button class="like btn">
+                            <img src="./icons/8664909_heart_like_icon.svg" alt="">
+                        </button>
+                    </a>
                     <button class="basket btn">
                         <img src="./icons/3507743_basket_iconoteka_shop_shopping_store_icon.svg" alt="">
                     </button>
