--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       </div>
       <div class="header_bottom">
         <div class="header_bottom_left">
-          <a href="#">
+          <a href="./pages/products.html">
             <p>Products</p>
           </a>
           <a href="#">
