--- a/pages/like.html
+++ b/pages/like.html
@@ -411,6 +411,9 @@
 
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../modules/like.js"></script>
 </body>
 
 </html>
