--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <img src="./icons/menu.svg" width="28px" />
       <p>Menu</p>
     </div>
-    <header>
+    <!-- <header>
       <div class="header_top">
         <div class="header_top_left">
           <img class="logo" src="https://www.ikea.com/nl/en/static/ikea-logo.f7d9229f806b59ec64cb.svg" alt="" />
@@ -236,7 +236,7 @@
           </a>
         </div>
       </div>
-    </header>
+    </header> -->
 
     <div class="container-swiper">
       <div style="
@@ -623,7 +623,7 @@
     header()
   </script> -->
 
-
+  <script src="../pages js/header.js"></script>
   <!-- Initialize Swiper -->
   <script>
     var swiper = new Swiper(".mySwiper", {
