--- a/pages/basket.html
+++ b/pages/basket.html
@@ -16,66 +16,7 @@
             <img src="../icons/menu.svg" width="28px">
             <p>Menu</p>
         </div>
-        <header>
-            <div class="header_top">
-                <div class="header_top_left">
-                    <img class='logo' src="https://www.ikea.com/nl/en/static/ikea-logo.f7d9229f806b59ec64cb.svg" alt="">
-                    <form name="search">
-                        <div>
-                            <img src="../icons/211817_search_strong_icon.svg" width="16px" height="16px" alt="">
-                            <input type="text" placeholder="What are you looking for?">
-                        </div>
-                        <img class="photo" src="../icons/115759_camera_icon.svg" width="16px" height="16px" alt="">
-                    </form>
-                </div>
-
-                <div class="login">
-                    <button class="log_in">
-                        <img src="../icons/1564534_customer_man_user_account_profile_icon (1).svg" alt="">
-                        <span>Hej! Log in or sing up</span>
-                    </button>
-                    <button class="like btn">
-                        <img src="../icons/8664909_heart_like_icon.svg" alt="">
-                    </button>
-                    <button class="basket btn">
-                        <img src="../icons/3507743_basket_iconoteka_shop_shopping_store_icon.svg" alt="">
-                    </button>
-                </div>
-
-
-            </div>
-            <div class="header_bottom">
-                <div class="header_bottom_left">
-                    <a href="#">
-                        <p>Products</p>
-                    </a>
-                    <a href="#">
-                        <p>Rooms</p>
-                    </a>
-                    <a href="#">
-                        <p>What's new</p>
-                    </a>
-                    <a href="#">
-                        <p>Offers</p>
-                    </a>
-
-                </div>
-                <div class="header_bottom_right">
-                    <a href="#">
-                        <p><img src="../icons/7019497_shipping_transportation_delivery_truck_online_icon.svg" alt="">
-                            <span>Enter postcode</span>
-                        </p>
-                    </a>
-                    <a href="#">
-                        <p><img src="../icons/9042517_garage_icon.svg" alt=""> <span>Hengelo</span></p>
-                    </a>
-
-                </div>
-            </div>
-
-        </header>
-
-
+       
         <div class="basket_main">
             <div class="basket_main_left">
 
@@ -98,33 +39,6 @@
                 </div>
 
                 <div class="basket_create">
-                    <div class="basket_create_box">
-                        <div class="box_left">
-                            <img class="prodo_img"
-                                src="https://www.ikea.com/us/en/images/products/malm-high-bed-frame-2-storage-boxes-white-luroey__1154393_pe886042_s5.jpg?f=s"
-                                alt="">
-                            <div class="box_info">
-                                <div>
-                                    <h1 class="box_name">STARKVIND</h1>
-                                    <p class="box_subtitle">Table With Air Purifier, stained oak veneer/dark brown smart
-                                    </p>
-                                </div>
-
-                                <div class="onpions">
-                                    <form name="howmany">
-                                        <select  class="howmash">
-                                            <option value="0">0</option>
-                                            <option value="1">1</option>
-                                        </select>
-                                    </form>
-                                    <p class="remove">Remove product</p>
-                                    <p class="shoping_list">Move to shopping list >></p>
-                                </div>
-                            </div>
-                        </div>
-                        <p class="prod_price">€ 163.99</p>
-                    </div>
-
 
                 </div>
             </div>
@@ -404,7 +318,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+    <script src="../pages js/header.js"></script>
     <script src="../modules/basket.js"></script>
 </body>
 
